--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,27 @@
-
-/* Your CSS Code here. */
+*{
+        padding: 0;
+        margin: 0;
+    }
+    ul{
+        display: flex;
+        background-color: #cdcdcd;
+    }
+    li{
+        list-style: none;
+        padding: 20px;
+    }
+    li a{
+        color: black;
+        text-decoration: none;
+    }
+    h1{
+        margin-top: 15px;
+        text-align: center;
+    }
+    .img{
+       display: flex;
+       justify-content: center; 
+    }
+    img{
+        padding: 10px;
+    }
